kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdeployment
  labels:
    app: proxynginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: proxynginx
  template:
    metadata:
      labels:
        app: proxynginx
    spec:
      containers:
      - name: nginx
        image: laurobmb/nginx-proxy:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "5m"
            memory: "5Mi"
          limits:
            cpu: "10m"
            memory: "128Mi"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxingress
  annotations:
   kubernetes.io/ingress.class: "nginx"
   nginx.ingress.kubernetes.io/enable-owasp-modsecurity-crs: "true"
   nginx.ingress.kubernetes.io/enable-modsecurity: "true"
   nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABIJDEFHZ
      SecAuditLog /var/log/modsec_audit.log
      SecRule REQUEST_HEADERS:User-Agent \"fern-scanner\" \"log,deny,id:107,status:403,msg:\'Fern Scanner Identified\'\"
spec:
  tls:
  - hosts:
    - app6.w0rm30.seg.br
    secretName: app6-secret

  rules:
  - host: app6.w0rm30.seg.br
    http:
      paths:
      - backend:
          service:
            name: nginxsvc
            port:
              number: 80
        path: /
        pathType: Prefix

---
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  labels:
    app: proxynginx
spec:
  selector:
    app: proxynginx
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
